--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,10 @@
 
     <div class="flex items-center justify-center space-x-8 text-white text-xl font-mono">
 
-
+      <button type="" class=" transition ease-in-out delay-150  hover:-translate-y-1 hover:scale-50 duration-300">
       <img
       src="https://bootstraplogos.com/wp-content/uploads/edd/2018/10/logo-2.png" class="w-[95px] h-8 w-8">
-
+      </button>
         
       <a href="#home"
 
@@ -35,7 +35,7 @@
     <div class="flex">
 
       <div class="text-white font-medium py-24 ">
-
+        
         <h1 class="px-28 mt-36 text-4xl">Hey there!</h1>
 
         <h1 class="text-pink-600 text-6xl px-28 py-4">I'm Nandana T S.</h1>
@@ -47,11 +47,12 @@
       </div>
 
       <div class="px-6 py-20">
+        <button type="" class=" transition ease-in-out delay-150  hover:-translate-y-1 hover:scale-50 duration-300">
 
         <img src="https://www.pngarts.com/files/6/Real-Pink-Butterfly-PNG-Image-Background.png" class=" py-10 px-10 h-96 w-96"
 
           alt="..." />
-
+      </button>
       </div>
 
     </div>
@@ -62,9 +63,8 @@
 
   <div id="about" class="h-screen bg-black">
    
-
     <h1 class=" py-16 text-6xl text-pink-600 font-medium text-center">About Me!</h1>
-
+  
     <div class="  text-2xl text-center py-5 px-10 text-white">
 
       <a>I'm a b-tech undergraduate currently pursuing Computer Science and Engineering at
@@ -175,11 +175,11 @@
 
       </a>
 
-      <a href="https://instagram.com/nandana.krishna.7?igshid=MGNiNDI5ZTU=" >
+      <a href="https://twitter.com/NandanaTS5?t=lUDuQ2XmHkkbQMyAB0EzHg&s=09" >
 
         <img
 
-          src="https://th.bing.com/th/id/R.0082008513ef0349aec090a3867f8291?rik=A1WbWRsROyIl8g&riu=http%3a%2f%2ftous-logos.com%2fwp-content%2fuploads%2f2017%2f07%2fLe-Logo-Instagram.png&ehk=agg3ZTVp%2fL50Fon2ohdpNKkvvwRXAfI2tNj5B5dLfao%3d&risl=&pid=ImgRaw&r=0"
+          src="http://icons.iconarchive.com/icons/iynque/ios7-style/1024/Twitter-icon.png"
 
           class="h-16 w-18 px-48" alt="...." />
 
